--- a/ExcelBeadPattern/ExcelBeadPatternTest/ExcelBeadPatternTest.csproj
+++ b/ExcelBeadPattern/ExcelBeadPatternTest/ExcelBeadPatternTest.csproj
@@ -52,6 +52,7 @@
   <ItemGroup>
     <Compile Include="BeadTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UserInputTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ExcelBeadPattern\ExcelBeadPattern.csproj">
